--- a/index.html
+++ b/index.html
@@ -174,6 +174,12 @@ updateCountdown();
 }
 </style>
 
+
+<script src="https://unpkg.com/web3modal@1.9.12/dist/index.js"></script>
+<script src="https://unpkg.com/@walletconnect/web3-provider@1.7.8/dist/umd/index.min.js"></script>
+<script src="app.js" defer></script>
+
+    
 <script>
 // Пример динамических данных
 document.getElementById('total-distributed').innerText = '742,000';
