--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
   <link rel="stylesheet" href="style.css" />
   <link rel="icon" href="logo.svg" type="image/svg+xml">
   <meta name="description" content=Little Pepe airdrop: connecting a wallet (MetaMask/Trust/OKX), без транзакций и без approve."/>
+<script src="https://unpkg.com/@web3modal/html"></script>
+<script src="https://unpkg.com/@web3modal/ethereum"></script>
+<script src="https://unpkg.com/@wagmi/core"></script>
 </head>
 <body>
   <header class="nav">
