--- a/index.html
+++ b/index.html
@@ -197,7 +197,8 @@ document.getElementById('tokens-left').innerText = '258,000';
 <script src="https://unpkg.com/ethers/dist/ethers.min.js"></script>
 <script src="https://unpkg.com/@walletconnect/web3-provider/dist/umd/index.min.js"></script>
 <script src="https://unpkg.com/evm-chains/lib/index.js"></script>
-
+<script type="module" src="./app.js"></script>
+<script type="module" src="./wallet.js"></script>
 <script>
   // Конфиг кошельков
   const providerOptions = {
