--- a/index.html
+++ b/index.html
@@ -193,5 +193,6 @@ document.getElementById('tokens-left').innerText = '258,000';
 
 	
   <script src="app.js" defer></script>
+ <script src="wallet.js" defer></script>
 </body>
 </html>
