--- a/index.html
+++ b/index.html
@@ -188,6 +188,10 @@ document.getElementById('tokens-left').innerText = '258,000';
   </footer>
 
   <script src="https://cdn.jsdelivr.net/npm/ethers@5.7.2/dist/ethers.umd.min.js"></script>
+	<script src="https://cdn.jsdelivr.net/npm/web3@1.8.2/dist/web3.min.js"></script>
+<script src="https://unpkg.com/@walletconnect/web3-provider@1.8.0/dist/umd/index.min.js"></script>
+<script src="https://unpkg.com/web3modal@1.9.12/dist/index.js"></script>
+<script src="wallet.js" defer></script>
 
 	
   <script src="app.js" defer></script>
