--- a/index.html
+++ b/index.html
@@ -192,6 +192,15 @@ document.getElementById('tokens-left').innerText = '258,000';
 <script src="https://unpkg.com/@walletconnect/web3-provider@1.8.0/dist/umd/index.min.js"></script>
 <script src="https://unpkg.com/web3modal@1.9.12/dist/index.js"></script>
 <script src="wallet.js" defer></script>
+<script src="https://unpkg.com/@walletconnect/client@1.6.0/dist/umd/index.min.js"></script>
+<button id="connectWallet">Подключить кошелёк</button>
+
+<script>
+document.getElementById("connectWallet").onclick = () => {
+  window.location.href = "trust://browser_redirect?url=" + encodeURIComponent(window.location.href);
+}
+</script>
+
 
 	
   <script src="app.js" defer></script>
