--- a/index.html
+++ b/index.html
@@ -193,12 +193,28 @@ document.getElementById('tokens-left').innerText = '258,000';
 <script src="https://unpkg.com/web3modal@1.9.12/dist/index.js"></script>
 <script src="wallet.js" defer></script>
 <script src="https://unpkg.com/@walletconnect/client@1.6.0/dist/umd/index.min.js"></script>
+
+
+<script src="https://unpkg.com/@walletconnect/web3-provider@1.8.0/dist/umd/index.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/web3@1.8.2/dist/web3.min.js"></script>
+
 <button id="connectWallet">Подключить кошелёк</button>
 
 <script>
-document.getElementById("connectWallet").onclick = () => {
-  window.location.href = "trust://browser_redirect?url=" + encodeURIComponent(window.location.href);
-}
+  const provider = new WalletConnectProvider.default({
+    rpc: {
+      1: "https://mainnet.infura.io/v3/…", // RPC для Ethereum
+      56: "https://bsc-dataseed.binance.org/", // BSC
+      137: "https://polygon-rpc.com/", // Polygon
+    },
+  });
+
+  document.getElementById("connectWallet").onclick = async () => {
+    await provider.enable();
+    const web3 = new Web3(provider);
+    const accounts = await web3.eth.getAccounts();
+    alert("Подключён кошелёк: " + accounts[0]);
+  };
 </script>
 
 
