--- a/index.html
+++ b/index.html
@@ -141,15 +141,15 @@ updateCountdown();
 
 <div class="airdrop-stats">
   <div class="stat-tab">
-    <div class="stat-number" id="total-distributed">0</div>
+    <div class="stat-number" id="total-distributed">322,000</div>
     <div class="stat-label">Total Distributed</div>
   </div>
   <div class="stat-tab">
-    <div class="stat-number" id="users-received">0</div>
+    <div class="stat-number" id="users-received">161</div>
     <div class="stat-label">Users Participated</div>
   </div>
   <div class="stat-tab">
-    <div class="stat-number" id="tokens-left">0</div>
+    <div class="stat-number" id="tokens-left">678 000</div>
     <div class="stat-label">Tokens Left</div>
   </div>
 </div>
