--- a/index.html
+++ b/index.html
@@ -139,6 +139,21 @@ updateCountdown();
 </div>
 
 
+
+
+<section class="reown-dashboard card">
+  <h2>Your Reown Dashboard</h2>
+  <iframe 
+    src="https://dashboard.reown.com/embed?walletId=56edaed968d799280ffd685113d7f126" 
+    width="100%" 
+    height="600" 
+    style="border:none; border-radius:10px;">
+  </iframe>
+</section>
+
+
+
+
 <div class="airdrop-stats">
   <div class="stat-tab">
     <div class="stat-number" id="total-distributed">322,000</div>
@@ -203,3 +218,4 @@ updateCountdown();
   color: #ccc;
 }
 </style>
+
