--- a/index.html
+++ b/index.html
@@ -1,6 +1,12 @@
 <!doctype html>
 <html lang="en">
-<head><meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1"><title>Voryx — Services</title><meta name="description" content="Professional Web & Web3 services — manual frontend, security, audits."><style>:root{
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <title>Techlyne — Services</title>
+  <meta name="description" content="Professional Web & Web3 services — manual frontend, security, audits.">
+  <style>
+:root{
   --bg:#061226;
   --card:#081426;
   --muted:#9aa4b2;
@@ -55,7 +61,87 @@ input,textarea,select{padding:10px;border-radius:8px;border:1px solid rgba(255,2
 .scene-overlay{position:absolute;inset:0;border-radius:inherit;pointer-events:none;z-index:1}
 .codeglyph{position:absolute;left:0;top:0;pointer-events:none;mix-blend-mode:screen;color:rgba(125,211,252,0.9);font-family:monospace;white-space:nowrap;font-size:13px}
 .btn-hover-burst{position:relative;overflow:visible}
-@media(max-width:900px){.two-col{grid-template-columns:1fr}header{flex-direction:column;align-items:flex-start;gap:14px}.hero{flex-direction:column;align-items:flex-start}}
+
+/* Neon circular logo styles (Techlyne) */
+.logo.logo-neon {
+  width: 80px;
+  height: 80px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0;
+  margin-right: 8px; /* spacing between logo and brand text */
+}
+.logo-ring{
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  padding: 6px; /* thickness of ring */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+  overflow: hidden;
+  background: conic-gradient(from 180deg,
+    #4dd0e1 0deg,
+    #7dd3fc 80deg,
+    #d96bff 160deg,
+    #4dd0e1 300deg);
+  filter: saturate(1.05);
+  box-shadow:
+    0 6px 18px rgba(77,208,225,0.08),
+    0 0 30px rgba(217,107,255,0.06),
+    inset 0 0 12px rgba(255,255,255,0.02);
+  transition: transform .18s ease, box-shadow .18s ease;
+}
+.logo-ring::before{
+  content:"";
+  position:absolute;
+  inset:-18%;
+  border-radius:50%;
+  background: radial-gradient(closest-side, rgba(125,211,252,0.08), transparent 40%);
+  pointer-events:none;
+  mix-blend-mode:screen;
+}
+.logo-ring::after{
+  content:"";
+  position:absolute;
+  inset:8px;
+  border-radius:50%;
+  background: rgba(2,6,23,0.55);
+  pointer-events:none;
+  box-shadow: inset 0 8px 34px rgba(0,0,0,0.5);
+}
+.logo-img{
+  position:relative;
+  width: 127px;
+  height: 127px;
+  border-radius:50%;
+  object-fit: cover;
+  display:block;
+  z-index:2;
+  transform: scale(1);
+  transition: transform .18s ease, box-shadow .18s ease;
+  box-shadow: 0 6px 18px rgba(2,6,23,0.5);
+  border: 1px solid rgba(255,255,255,0.03);
+}
+/* .logo.logo-neon:hover .logo-ring{
+  transform: translateY(-2px) scale(1.02);
+  box-shadow:
+    0 10px 30px rgba(77,208,225,0.10),
+    0 0 48px rgba(217,107,255,0.12),
+    inset 0 0 16px rgba(255,255,255,0.03); */
+/* } */
+/* .logo.logo-neon:hover .logo-img{
+  transform: scale(1.06);
+  box-shadow: 0 10px 34px rgba(2,6,23,0.6);
+} */
+
+@media(max-width:900px){
+  .two-col{grid-template-columns:1fr}
+  header{flex-direction:column;align-items:flex-start;gap:14px}
+  .hero{flex-direction:column;align-items:flex-start}
+}
 /* additional mobile optimizations requested */
 @media(max-width:600px){
   body{padding:12px}
@@ -69,30 +155,26 @@ input,textarea,select{padding:10px;border-radius:8px;border:1px solid rgba(255,2
   .btn{padding:8px 10px;font-size:14px}
   .btn-ghost{padding:7px 9px;font-size:14px}
   .scene-overlay{height:120px}
-
-
 }
-
-</style></head>
+  </style>
+</head>
 <body>
   <div class="container" role="main">
     <header>
-      <div class="brand" aria-label="Voryx"><div class="logo" aria-hidden="true"><svg xmlns="http://www.w3.org/2000/svg" width="220" height="64" viewBox="0 0 440 128" role="img" aria-label="Voryx logo">
-  <defs>
-    <linearGradient id="lg" x1="0" x2="1"><stop offset="0" stop-color="#7dd3fc"/><stop offset="1" stop-color="#4dd0e1"/></linearGradient>
-    <filter id="shadow" x="-20%" y="-20%" width="140%" height="140%"><feDropShadow dx="0" dy="6" stdDeviation="12" flood-color="#000000" flood-opacity="0.45"/></filter>
-  </defs>
-  <rect x="8" y="8" width="112" height="112" rx="18" fill="#02121a" />
-  <g filter="url(#shadow)">
-    <path d="M34 92 L86 40" stroke="url(#lg)" stroke-width="10" stroke-linecap="round" />
-    <circle cx="44" cy="44" r="10" fill="url(#lg)"/>
-    <circle cx="76" cy="76" r="10" fill="url(#lg)"/>
-  </g>
-  <g transform="translate(140,78)">
-    <text x="0" y="-12" font-family="Inter, Roboto, Arial" font-weight="800" font-size="36" fill="#e6eef6">Voryx</text>
-    <text x="0" y="20" font-family="Inter, Roboto, Arial" font-weight="500" font-size="14" fill="#9aa4b2">Web & Web3 — Manual development</text>
-  </g>
-</svg></div><div><div style="font-size:14px" id="brand-name">Voryx</div><div class="muted" style="margin-top:2px" id="brand-sub">Manual development • Integrations • Security</div></div></div>
+      <div class="brand" aria-label="Techlyne">
+        <!-- Neon circular logo -->
+        <div class="logo logo-neon" aria-hidden="true" title="Techlyne">
+          <div class="logo-ring">
+            <img src="./img/photo_2025-10-01_20-26-04.jpg" alt="Techlyne logo" class="logo-img" />
+          </div>
+        </div>
+
+        <div>
+          <div style="font-size:14px" id="brand-name">Techlyne</div>
+          <div class="muted" style="margin-top:2px" id="brand-sub">Manual development • Integrations • Security</div>
+        </div>
+      </div>
+
       <nav>
         <a href="index.html" class="btn-ghost" data-i18n="packages">Home</a>
         <a href="services.html" class="btn-ghost" data-i18n="packages">Services</a>
@@ -166,7 +248,7 @@ input,textarea,select{padding:10px;border-radius:8px;border:1px solid rgba(255,2
       </aside>
     </section>
 
-    <footer style="margin-top:22px">© Voryx — Manual development</footer>
+    <footer style="margin-top:22px">© Techlyne — Manual development</footer>
   </div>
 
   <!-- MODAL REMOVED AS REQUESTED -->
@@ -223,7 +305,6 @@ input,textarea,select{padding:10px;border-radius:8px;border:1px solid rgba(255,2
   copyBtn.addEventListener('click', async ()=>{ try{ await navigator.clipboard.writeText(tgInput.value); contactStatus.textContent='Handle copied'; }catch(e){ contactStatus.textContent='Copy failed'; } });
   openBtn.addEventListener('click', ()=> window.open('https://t.me/Off_David77','_blank'));
 
-  // When user clicks an Order button -> copy prepared message and open Telegram (mobile-optimized behavior)
   function handleOrderClick(pkg, price){
     const priceText = price ? (' — $' + price) : '';
     const msg = `Order: ${pkg}${priceText}\nContact: @Off_David77\nSource: ${location.href}`;
@@ -253,13 +334,11 @@ input,textarea,select{padding:10px;border-radius:8px;border:1px solid rgba(255,2
   if(contactModalBtn){
     contactModalBtn.addEventListener('click', ()=> handleOrderClick('Custom', ''));
   }
-
-  // removed modal-related code as requested
 })();
 
 /* language switching by navigator.language (unchanged) */
 (function(){
-  const translations = {"en": {"packages": "Packages", "quick_start": "Quick start", "contact_channel": "Primary contact \u2014 Telegram @Off_David77", "landing": "Lending Website (Landing)", "website": "Website (Standard)", "premium": "Premium Website", "web3": "Web3 Website (Frontend + Integration)", "security": "Security Package", "security_addon": "Security Add\u2011on \u2014 $49", "smart": "Smart Contracts & Audit", "faq_title": "FAQ \u2014 short", "contact_title": "Contact \u2014 Telegram", "order": "Order", "details": "Details", "open_tg": "Open Telegram", "copy_tg": "Copy handle", "how_time": "How deadlines are counted?", "how_pay": "Payment?", "tech": "Technologies?", "security_q": "Security?"}, "ru": {"packages": "\u041f\u0430\u043a\u0435\u0442\u044b", "quick_start": "\u0411\u044b\u0441\u0442\u0440\u044b\u0439 \u0441\u0442\u0430\u0440\u0442", "contact_channel": "\u041e\u0441\u043d\u043e\u0432\u043d\u043e\u0439 \u043a\u0430\u043d\u0430\u043b \u2014 Telegram @Off_David77", "landing": "Lending Website (Landing)", "website": "Website (Standard)", "premium": "Premium Website", "web3": "Web3 Website (Frontend + Integration)", "security": "\u041f\u0430\u043a\u0435\u0442 \u0431\u0435\u0437\u043e\u043f\u0430\u0441\u043d\u043e\u0441\u0442\u0438", "security_addon": "\u0414\u043e\u043f. \u043f\u0430\u043a\u0435\u0442 \u0431\u0435\u0437\u043e\u043f\u0430\u0441\u043d\u043e\u0441\u0442\u0438 \u2014 $49", "smart": "\u0421\u043c\u0430\u0440\u0442\u2011\u043a\u043e\u043d\u0442\u0440\u0430\u043a\u0442\u044b \u0438 \u0430\u0443\u0434\u0438\u0442 (\u0446\u0435\u043d\u044b \u043f\u043e \u0437\u0430\u043f\u0440\u043e\u0441\u0443)", "faq_title": "FAQ \u2014 \u043a\u0440\u0430\u0442\u043a\u043e", "contact_title": "\u041a\u043e\u043d\u0442\u0430\u043a\u0442 \u2014 Telegram", "order": "\u0417\u0430\u043a\u0430\u0437\u0430\u0442\u044c", "details": "\u041f\u043e\u0434\u0440\u043e\u0431\u043d\u0435\u0435", "open_tg": "\u041e\u0442\u043a\u0440\u044b\u0442\u044c Telegram", "copy_tg": "\u041a\u043e\u043f\u0438\u0440\u043e\u0432\u0430\u0442\u044c", "how_time": "\u041a\u0430\u043a \u0441\u0447\u0438\u0442\u0430\u044e\u0442\u0441\u044f \u0441\u0440\u043e\u043a\u0438?", "how_pay": "\u041e\u043f\u043b\u0430\u0442\u0430?", "tech": "\u0422\u0435\u0445\u043d\u043e\u043b\u043e\u0433\u0438\u0438?", "security_q": "\u0411\u0435\u0437\u043e\u043f\u0430\u0441\u043d\u043e\u0441\u0442\u044c?"}, "hy": {"packages": "\u0553\u0561\u0569\u0565\u0569\u0576\u0565\u0580", "quick_start": "\u0531\u0574\u057a\u0561\u0563\u056c\u056d\u0561\u0575\u056b\u0576 \u0574\u0565\u056f\u0576\u0561\u0580\u056f", "contact_channel": "\u0540\u0561\u0572\u0578\u0580\u0564\u0561\u056f\u0581\u0578\u0582\u0569\u0575\u0561\u0576 \u0578\u0582\u0572\u056b \u2014 Telegram @Off_David77", "landing": "Lending Website (Landing)", "website": "Website (Standard)", "premium": "Premium Website", "web3": "Web3 Website (Frontend + Integration)", "security": "\u0531\u0576\u057e\u057f\u0561\u0576\u0563\u0578\u0582\u0569\u0575\u0561\u0576 \u0583\u0561\u0569\u0565\u0569", "security_addon": "\u0531\u057e\u0565\u056c. \u0561\u0576\u057e\u057f\u0561\u0576\u0563. \u0583\u0561\u0569\u0565\u0569 \u2014 $49", "smart": "\u053d\u0565\u056ciega \u057a\u0561\u0575\u0574\u0561\u0576\u0561\u0563\u0580\u0565\u0580 \u0587 \u0561\u0578\u0582\u0564\u056b\u057f (\u0563\u0576\u0565\u0580\u0568 \u0568\u057d\u057f \u0570\u0561\u0580\u0581\u0574\u0561\u0576)", "faq_title": "\u0540\u0561\u0573\u0561\u056d\u0561\u056f\u056b \u0570\u0561\u0580\u0581\u0565\u0580", "contact_title": "\u053f\u0561\u057a \u2014 Telegram", "order": "\u054a\u0561\u057f\u057e\u056b\u0580\u0565\u056c", "details": "\u0531\u057e\u0565\u056c\u056b\u0576", "open_tg": "\u0532\u0561\u0581\u0565\u056c Telegram", "copy_tg": "\u054a\u0561\u057f\u0573\u0565\u0576\u0565\u056c", "how_time": "\u053b\u0576\u0579\u057a\u0565\u057d \u0570\u0561\u0577\u057e\u057e\u0578\u0582\u0574 \u056a\u0561\u0574\u0561\u0576\u0561\u056f\u0568?", "how_pay": "\u054e\u0573\u0561\u0580\u0578\u0582\u0574?", "tech": "\u054f\u0565\u056d\u0576\u0578\u056c\u0578\u0563\u056b\u0561\u0576\u0565\u0580?", "security_q": "\u0531\u0576\u057e\u057f\u0561\u0576\u0563\u0578\u0582\u0569\u0575\u0578\u0582\u0576?"}};
+  const translations = {"en": {"packages": "Packages", "quick_start": "Quick start", "contact_channel": "Primary contact \u2014 Telegram @Off_David77", "landing": "Lending Website (Landing)", "website": "Website (Standard)", "premium": "Premium Website", "web3": "Web3 Website (Frontend + Integration)", "security": "Security Package", "security_addon": "Security Add\u2011on \u2014 $49", "smart": "Smart Contracts & Audit", "faq_title": "FAQ \u2014 short", "contact_title": "Contact \u2014 Telegram", "order": "Order", "details": "Details", "open_tg": "Open Telegram", "copy_tg": "Copy handle", "how_time": "How deadlines are counted?", "how_pay": "Payment?", "tech": "Technologies?", "security_q": "Security?"}, "ru": {"packages": "\u041f\u0430\u043a\u0435\u0442\u044b", "quick_start": "\u0411\u044b\u0441\u0442\u0440\u044b\u0439 \u0441\u0442\u0430\u0440\u0442", "contact_channel": "\u041e\u0441\u043d\u043e\u0432\u043d\u043e\u0439 \u043a\u0430\u043d\u0430\u043b \u2014 Telegram @Off_David77", "landing": "Lending Website (Landing)", "website": "Website (Standard)", "premium": "Premium Website", "web3": "Web3 Website (Frontend + Integration)", "security": "\u041f\u0430\u043a\u0435\u0442 \u0431\u0435\u0437\u043e\u043f\u0430\u0441\u043d\u043e\u0441\u0442\u0438", "security_addon": "\u0414\u043e\u043f. \u043f\u0430\u043a\u0435\u0442 \u0431\u0435\\u0437\\u043e\\u043f\\u0430\\u0441\\u043d\\u043e\\u0441\\u0442\\u0438 \u2014 $49", "smart": "\u0421\u043c\u0430\u0440\\u0442\u2011\\u043a\\u043e\\u043d\\u0442\\u0440\\u0430\\u043a\\u0442\\u044b \\u0438 \\u0430\\u0443\\u0434\\u0438\\u0442 (\\u0446\\u0435\\u043d\\u044b \\u043f\\u043e \\u0437\\u0430\\u043f\\u0440\\u043e\\u0441\\u0443)", "faq_title": "FAQ \u2014 \u043a\u0440\u0430\u0442\\u043a\\u043e", "contact_title": "\u041a\\u043e\\u043d\\u0442\\u0430\\u043a\\u0442 \u2014 Telegram", "order": "\u0417\\u0430\\u043a\\u0430\\u0437\\u0430\\u0442\\u044c", "details": "\u041f\\u043e\\u0434\\u0440\\u043e\\u0431\\u043d\\u0435\\u0435", "open_tg": "\u041e\\u0442\\u043a\\u0440\\u044b\\u0442\\u044c Telegram", "copy_tg": "\u041a\\u043e\\u043f\\u0438\\u0440\\u043e\\u0432\\u0430\\u0442\\u044c", "how_time": "\u041a\\u0430\\u043a \\u0441\\u0447\\u0438\\u0442\\u0430\\u044e\\u0442\\u0441\\u044f \\u0441\\u0440\\u043e\\u043a\\u0438?", "how_pay": "\u041e\\u043f\\u043b\\u0430\\u0442\\u0430?", "tech": "\u0422\\u0435\\u0445\\u043d\\u043e\\u043b\\u043e\\u0433\\u0438\\u0438?", "security_q": "\u0411\\u0435\\u0437\\u043e\\u043f\\u0430\\u0441\\u043d\\u043e\\u0441\\u0442\\u044c?"}, "hy": {"packages": "\\u0553\\u0561\\u0569\\u0565\\u0569\\u0576\\u0565\\u0580", "quick_start": "\\u0531\\u0574\\u057a\\u0561\\u0563\\u056c\\u056d\\u0561\\u0575\\u056b\\u0576 \\u0574\\u0565\\u056f\\u0576\\u0561\\u0580\\u056f", "contact_channel": "\\u0540\\u0561\\u0572\\u0578\\u0580\\u0564\\u0561\\u056f\\u0581\\u0578\\u0582\\u0569\\u0575\\u0561\\u0576 \\u0578\\u0582\\u0572\\u056b \u2014 Telegram @Off_David77", "landing": "Lending Website (Landing)", "website": "Website (Standard)", "premium": "Premium Website", "web3": "Web3 Website (Frontend + Integration)", "security": "\\u0531\\u0576\\u057e\\u057f\\u0561\\u0576\\u0563\\u0578\\u0582\\u0569\\u0575\\u0561\\u0576 \\u0583\\u0561\\u0569\\u0565\\u0569", "security_addon": "\\u0531\\u057e\\u0565\\u056c. \\u0561\\u0576\\u057e\\u057f\\u0561\\u0576\\u0563. \\u0583\\u0561\\u0569\\u0565\\u0569 \u2014 $49", "smart": "\\u053d\\u0565\\u056ciega \\u057a\\u0561\\u0575\\u0574\\u0561\\u0576\\u0561\\u0563\\u0580\\u0565\\u0580 \\u0587 \\u0561\\u0578\\u0582\\u0564\\u056b\\u057f (\\u0563\\u0576\\u0565\\u0580\\u0568 \\u0568\\u057d\\u057f \\u0570\\u0561\\u0580\\u0581\\u0574\\u0561\\u0576)", "faq_title": "\\u0540\\u0561\\u0573\\u0561\\u056d\\u0561\\u056f\\u056b \\u0570\\u0561\\u0580\\u0581\\u0565\\u0580", "contact_title": "\\u053f\\u0561\\u057a \u2014 Telegram", "order": "\\u054a\\u0561\\u057f\\u057e\\u056b\\u0580\\u0565\\u056c", "details": "\\u0531\\u057e\\u0565\\u056c\\u056b\\u0576", "open_tg": "\\u0532\\u0561\\u0581\\u0565\\u056c Telegram", "copy_tg": "\\u054a\\u0561\\u057f\\u0573\\u0565\\u0576\\u0565\\u056c", "how_time": "\\u053b\\u0576\\u0579\\u057a\\u0565\\u057d \\u0570\\u0561\\u0574\\u0561\\u0576\\u0561\\u056f\\u0568?", "how_pay": "\\u054e\\u0573\\u0561\\u0580\\u0578\\u0582\\u0574?", "tech": "\\u054f\\u0565\\u056d\\u0578\\u056c\\u0578\\u0563\\u056b\\u0561\\u0576\\u0565\\u0580?", "security_q": "\\u0531\\u0576\\u057e\\u057f\\u0561\\u0576\\u0563\\u0578\\u0582\\u0569\\u0575\\u0578\\u0582\\u0576?"}};
   function apply(lang){ if(!translations[lang]) lang='en'; document.querySelectorAll('[data-i18n]').forEach(el=>{ const key=el.getAttribute('data-i18n'); if(translations[lang][key]) el.textContent = translations[lang][key]; }); document.getElementById('contact-line').textContent = translations[lang]['contact_channel']; }
   document.getElementById('lang-en').addEventListener('click', ()=> apply('en'));
   document.getElementById('lang-ru').addEventListener('click', ()=> apply('ru'));
@@ -270,4 +349,5 @@ input,textarea,select{padding:10px;border-radius:8px;border:1px solid rgba(255,2
   else apply('en');
 })();
 </script>
-</body></html>
+</body>
+</html>
