--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ input,textarea,select{padding:10px;border-radius:8px;border:1px solid rgba(255,2
   flex: 0 0 auto;
 }
 .logo-ring{
-  width: 100%;
+  width: 100px;
   height: 100%;
   border-radius: 50%;
   padding: 6px; /* thickness of ring */
@@ -99,8 +99,8 @@ input,textarea,select{padding:10px;border-radius:8px;border:1px solid rgba(255,2
 .logo-ring::after{ content:""; position:absolute; inset:8px; border-radius:50%; background: rgba(2,6,23,0.55); pointer-events:none; box-shadow: inset 0 8px 34px rgba(0,0,0,0.5); }
 .logo-img{
   position:relative;
-  width:100%;
-  height:auto;
+  width:125px;
+  height:125px;
   border-radius:50%;
   object-fit:cover;
   display:block;
@@ -345,3 +345,6 @@ input,textarea,select{padding:10px;border-radius:8px;border:1px solid rgba(255,2
 </script>
 </body>
 </html>
+
+
+
