--- a/index.html
+++ b/index.html
@@ -115,13 +115,13 @@ input,textarea,select{padding:10px;border-radius:8px;border:1px solid rgba(255,2
 /* hero right column wrapper (was inline width:380px) */
 .hero-right{width:100%;max-width:380px;flex:0 0 auto}
 
-@media(max-width:900px){
+/* @media(max-width:900px){
   .two-col{grid-template-columns:1fr}
   header{flex-direction:column;align-items:flex-start;gap:14px}
   .hero{flex-direction:column;align-items:flex-start}
   .hero-right{max-width:100%}
 }
-/* additional mobile optimizations requested */
+
 @media(max-width:600px){
   body{padding:12px}
   h1{font-size:20px}
@@ -135,7 +135,7 @@ input,textarea,select{padding:10px;border-radius:8px;border:1px solid rgba(255,2
   .btn{padding:8px 10px;font-size:14px}
   .btn-ghost{padding:7px 9px;font-size:14px}
   .scene-overlay{min-height:120px}
-}
+} */
   </style>
 </head>
 <body>
