--- a/index.html
+++ b/index.html
@@ -65,19 +65,19 @@ input,textarea,select{padding:10px;border-radius:8px;border:1px solid rgba(255,2
 /* Neon circular logo styles (Techlyne) - responsive */
 .logo.logo-neon {
   width: 80px;
-  height: 80px;
+  height: 10px;
   display: flex;
   align-items: center;
   justify-content: center;
   padding: 0;
-  margin-right: 8px; /* spacing between logo and brand text */
+  margin-right: 8px;
   flex: 0 0 auto;
 }
 .logo-ring{
-  width: 95px;
-  height: 80px;
+  width: 100px;
+  height: 84px;
   border-radius: 50%;
-  padding: 6px; /* thickness of ring */
+  padding: 6px; 
   display: flex;
   align-items: center;
   justify-content: center;
@@ -95,8 +95,8 @@ input,textarea,select{padding:10px;border-radius:8px;border:1px solid rgba(255,2
     inset 0 0 12px rgba(255,255,255,0.02);
   transition: transform .18s ease, box-shadow .18s ease;
 }
-.logo-ring::before{ content:""; position:absolute; inset:-18%; border-radius:50%; background: radial-gradient(closest-side, rgba(125,211,252,0.08), transparent 40%); pointer-events:none; mix-blend-mode:screen; }
-.logo-ring::after{ content:""; position:absolute; inset:8px; border-radius:50%; background: rgba(2,6,23,0.55); pointer-events:none; box-shadow: inset 0 8px 34px rgba(0,0,0,0.5); }
+/* .logo-ring::before{ content:""; position:absolute; inset:-18%; border-radius:50%; background: radial-gradient(closest-side, rgba(125,211,252,0.08), transparent 40%); pointer-events:none; mix-blend-mode:screen; }
+.logo-ring::after{ content:""; position:absolute; inset:8px; border-radius:50%; background: rgba(2,6,23,0.55); pointer-events:none; box-shadow: inset 0 8px 34px rgba(0,0,0,0.5); } */
 .logo-img{
   position:relative;
   width:127px;
