--- a/index.html
+++ b/index.html
@@ -129,8 +129,8 @@ input,textarea,select{padding:10px;border-radius:8px;border:1px solid rgba(255,2
   .right{width:100%}
   .grid{grid-template-columns:1fr}
   .card{padding:12px}
-  .logo.logo-neon{width:64px;height:64px}
-  .logo-img{max-width:64px}
+  .logo.logo-neon{width:82px;height:80px}
+  .logo-img{max-width:118px; height: 136px }
   nav{gap:6px}
   .btn{padding:8px 10px;font-size:14px}
   .btn-ghost{padding:7px 9px;font-size:14px}
