--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ input,textarea,select{padding:10px;border-radius:8px;border:1px solid rgba(255,2
   justify-content: center;
   position: relative;
   overflow: hidden;
-  background: conic-gradient(from 180deg,
+  /* background: conic-gradient(from 180deg,
     #4dd0e1 0deg,
     #7dd3fc 80deg,
     #d96bff 160deg,
@@ -93,14 +93,14 @@ input,textarea,select{padding:10px;border-radius:8px;border:1px solid rgba(255,2
     0 6px 18px rgba(77,208,225,0.08),
     0 0 30px rgba(217,107,255,0.06),
     inset 0 0 12px rgba(255,255,255,0.02);
-  transition: transform .18s ease, box-shadow .18s ease;
+  transition: transform .18s ease, box-shadow .18s ease; */
 }
 /* .logo-ring::before{ content:""; position:absolute; inset:-18%; border-radius:50%; background: radial-gradient(closest-side, rgba(125,211,252,0.08), transparent 40%); pointer-events:none; mix-blend-mode:screen; }
 .logo-ring::after{ content:""; position:absolute; inset:8px; border-radius:50%; background: rgba(2,6,23,0.55); pointer-events:none; box-shadow: inset 0 8px 34px rgba(0,0,0,0.5); } */
 .logo-img{
   position:relative;
-  width:127px;
-  height:127px;
+  width:107px;
+  height:107px;
   border-radius:50%;
   object-fit:cover;
   display:block;
@@ -129,8 +129,8 @@ input,textarea,select{padding:10px;border-radius:8px;border:1px solid rgba(255,2
   .right{width:100%}
   .grid{grid-template-columns:1fr}
   .card{padding:12px}
-  .logo.logo-neon{width:82px;height:80px}
-  .logo-img{max-width:118px; height: 136px }
+  .logo.logo-neon{width:86px;height:99px}
+  .logo-img{max-width:180px; height: 136px }
   nav{gap:6px}
   .btn{padding:8px 10px;font-size:14px}
   .btn-ghost{padding:7px 9px;font-size:14px}
@@ -145,7 +145,7 @@ input,textarea,select{padding:10px;border-radius:8px;border:1px solid rgba(255,2
         <!-- Neon circular logo -->
         <div class="logo logo-neon" aria-hidden="true" title="Techlyne">
           <div class="logo-ring">
-            <img src="./img/photo_2025-10-01_20-26-04.jpg" alt="Techlyne logo" class="logo-img" />
+            <img src="./img/photo_2025-10-01_20-26-04-Photoroom.png" alt="Techlyne logo" class="logo-img" />
           </div>
         </div>
 
